fix issue with map thumbnails being too large

--- a/styles/maps.scss
+++ b/styles/maps.scss
@@ -52,7 +52,7 @@ h1.pageTitle {
         }
         .imgContainer {
           margin-right: 1em;
-          width: 75%;
+          width: 50%;
           border: rgba(146, 146, 146, 0.185) 5px solid;
           border-radius: 5px;
 
